--- a/templates/signin.html
+++ b/templates/signin.html
@@ -106,7 +106,7 @@
           <div class="col" style="margin: 25px 50px 10px 50px">
             <p>비밀번호</p>
             <input
-              type="text"
+              type="password"
               class="form-control"
               id="userpw"
               placeholder="숫자, 영문, 특수문자 조합 최소 8자"
